--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,4 +2,6 @@ services:
   redis:
     image: redis:7.2.5-alpine3.20
     ports:
-      - "6371:6371"
+      - "6379:6379"
+    volumes:
+      - ./data:/data
